Update release notes

--- a/v1.20.4.md
+++ b/v1.20.4.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.4
 
 The release notes have been generated for the commit range
-[v1.20.3...15ec74e](https://github.com/cri-o/cri-o/compare/v1.20.3...15ec74ef1bff516e9c264fa8af22b8aa96adf3b2) on Mon, 16 Aug 2021 21:24:52 UTC.
+[v1.20.3...9d682e1](https://github.com/cri-o/cri-o/compare/v1.20.3...9d682e1f82a2e66340d11e7196f76a88a09de0a3) on Tue, 17 Aug 2021 20:56:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz)
-- [cri-o.arm64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.15ec74ef1bff516e9c264fa8af22b8aa96adf3b2.tar.gz)
+- [cri-o.amd64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz)
+- [cri-o.arm64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.9d682e1f82a2e66340d11e7196f76a88a09de0a3.tar.gz)
 
 ## Changelog since v1.20.3
 
@@ -36,6 +36,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5094](https://github.com/cri-o/cri-o/pull/5094), [@haircommander](https://github.com/haircommander))
  - Fix a bug where container storage can get corrupted if the `link` directory is missing. ([#5130](https://github.com/cri-o/cri-o/pull/5130), [@haircommander](https://github.com/haircommander))
  - Fix a performance regression with exec probes ([#5164](https://github.com/cri-o/cri-o/pull/5164), [@haircommander](https://github.com/haircommander))
+ - Fix potential panic when reopening a container's log ([#5214](https://github.com/cri-o/cri-o/pull/5214), [@haircommander](https://github.com/haircommander))
  - Fixed runtime panic if container storage layers lockfile parent directory got removed. ([#5072](https://github.com/cri-o/cri-o/pull/5072), [@saschagrunert](https://github.com/saschagrunert))
  - Improve memory usage during container image layer extraction. ([#5201](https://github.com/cri-o/cri-o/pull/5201), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#5058](https://github.com/cri-o/cri-o/pull/5058), [@haircommander](https://github.com/haircommander))
