--- a/v1.21.2.md
+++ b/v1.21.2.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.2
 
 The release notes have been generated for the commit range
-[v1.21.1...5d31399](https://github.com/cri-o/cri-o/compare/v1.21.1...5d31399d0e6a1944ea843959fcf53c5e1afa2d72) on Mon, 16 Aug 2021 16:06:22 UTC.
+[v1.21.1...6700fde](https://github.com/cri-o/cri-o/compare/v1.21.1...6700fde55ef4f6b9129d96b13366bcd351346cc1) on Tue, 17 Aug 2021 21:02:08 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5d31399d0e6a1944ea843959fcf53c5e1afa2d72.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.5d31399d0e6a1944ea843959fcf53c5e1afa2d72.tar.gz)
-- [cri-o.arm64.5d31399d0e6a1944ea843959fcf53c5e1afa2d72.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.5d31399d0e6a1944ea843959fcf53c5e1afa2d72.tar.gz)
+- [cri-o.amd64.6700fde55ef4f6b9129d96b13366bcd351346cc1.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.6700fde55ef4f6b9129d96b13366bcd351346cc1.tar.gz)
+- [cri-o.arm64.6700fde55ef4f6b9129d96b13366bcd351346cc1.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.6700fde55ef4f6b9129d96b13366bcd351346cc1.tar.gz)
 
 ## Changelog since v1.21.1
 
@@ -37,6 +37,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4980](https://github.com/cri-o/cri-o/pull/4980), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5093](https://github.com/cri-o/cri-o/pull/5093), [@haircommander](https://github.com/haircommander))
  - Fix a performance regression with exec probes ([#5162](https://github.com/cri-o/cri-o/pull/5162), [@haircommander](https://github.com/haircommander))
+ - Fix potential panic when reopening a container's log ([#5213](https://github.com/cri-o/cri-o/pull/5213), [@haircommander](https://github.com/haircommander))
  - Fixed "layer not known" issue during image pull for corrupted `layers.json` files. ([#5015](https://github.com/cri-o/cri-o/pull/5015), [@saschagrunert](https://github.com/saschagrunert))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4986](https://github.com/cri-o/cri-o/pull/4986), [@haircommander](https://github.com/haircommander))
 
