Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...71ec863](https://github.com/cri-o/cri-o/compare/v1.21.0...71ec863bb43bb2110b25ff80b53489670da2e0af) on Tue, 17 Aug 2021 18:24:21 UTC.
+[v1.21.0...8bcf6f7](https://github.com/cri-o/cri-o/compare/v1.21.0...8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df) on Wed, 18 Aug 2021 02:49:07 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz)
-- [cri-o.arm64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.71ec863bb43bb2110b25ff80b53489670da2e0af.tar.gz)
+- [cri-o.amd64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz)
+- [cri-o.arm64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -42,6 +42,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Added `--metrics-collectors`/`metrics_collectors` configuration to enable or disable certain metrics.
   All metrics collectors are enabled per default. ([#5061](https://github.com/cri-o/cri-o/pull/5061), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio_image_pulls_layer_size` histogram metric to get insights about all pulled layer sizes. ([#5059](https://github.com/cri-o/cri-o/pull/5059), [@saschagrunert](https://github.com/saschagrunert))
+ - Added build tags as well as AppArmor and seccomp status to `crio version` output. ([#5135](https://github.com/cri-o/cri-o/pull/5135), [@saschagrunert](https://github.com/saschagrunert))
  - Added generation of self-signed certificates for the secure metrics endpoint
   if the provided cert and key paths are not available on disk. ([#5012](https://github.com/cri-o/cri-o/pull/5012), [@saschagrunert](https://github.com/saschagrunert))
  - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
