--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...8bcf6f7](https://github.com/cri-o/cri-o/compare/v1.21.0...8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df) on Wed, 18 Aug 2021 02:49:07 UTC.
+[v1.21.0...71ab700](https://github.com/cri-o/cri-o/compare/v1.21.0...71ab70084e36b4c46bec1bdab7c6fbc840585740) on Wed, 18 Aug 2021 13:06:55 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz)
-- [cri-o.arm64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8bcf6f7d48ecf6f91930c053f0d9fdbbe98776df.tar.gz)
+- [cri-o.amd64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz)
+- [cri-o.arm64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -81,6 +81,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4834](https://github.com/cri-o/cri-o/pull/4834), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
+ - Fix potential panic when reopening a container's log ([#5212](https://github.com/cri-o/cri-o/pull/5212), [@haircommander](https://github.com/haircommander))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
