Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...71ab700](https://github.com/cri-o/cri-o/compare/v1.21.0...71ab70084e36b4c46bec1bdab7c6fbc840585740) on Wed, 18 Aug 2021 13:06:55 UTC.
+[v1.21.0...df41b98](https://github.com/cri-o/cri-o/compare/v1.21.0...df41b98f3946923b891252440e339fb6b11652f0) on Wed, 18 Aug 2021 15:09:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz)
-- [cri-o.arm64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.71ab70084e36b4c46bec1bdab7c6fbc840585740.tar.gz)
+- [cri-o.amd64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz)
+- [cri-o.arm64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -86,6 +86,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed linkmode detection for on `en_US` systems `crio version` ([#5168](https://github.com/cri-o/cri-o/pull/5168), [@saschagrunert](https://github.com/saschagrunert))
+ - Fixed runtime panic for layers lockfile if its parent directory does not exist.
+  Added support for repositories in auth.json ([#5076](https://github.com/cri-o/cri-o/pull/5076), [@saschagrunert](https://github.com/saschagrunert))
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
  - Reduce the permission on the listen socket to 0660 ([#4886](https://github.com/cri-o/cri-o/pull/4886), [@haircommander](https://github.com/haircommander))
  - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4974](https://github.com/cri-o/cri-o/pull/4974), [@haircommander](https://github.com/haircommander))
@@ -111,7 +113,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
 - github.com/carolynvs/magex: [v0.6.0](https://github.com/carolynvs/magex/tree/v0.6.0)
 - github.com/certifi/gocertifi: [2c3bb06](https://github.com/certifi/gocertifi/tree/2c3bb06)
-- github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
+- github.com/checkpoint-restore/go-criu/v5: [v5.1.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.1.0)
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
 - github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
 - github.com/cncf/xds/go: [fbca930](https://github.com/cncf/xds/go/tree/fbca930)
@@ -138,17 +140,20 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
 - github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
 - github.com/intel/goresctrl: [be5fa85](https://github.com/intel/goresctrl/tree/be5fa85)
-- github.com/jinzhu/copier: [v0.3.0](https://github.com/jinzhu/copier/tree/v0.3.0)
+- github.com/jinzhu/copier: [v0.3.2](https://github.com/jinzhu/copier/tree/v0.3.2)
 - github.com/josharian/intern: [v1.0.0](https://github.com/josharian/intern/tree/v1.0.0)
+- github.com/kr/fs: [v0.1.0](https://github.com/kr/fs/tree/v0.1.0)
 - github.com/mholt/archiver/v3: [v3.5.0](https://github.com/mholt/archiver/v3/tree/v3.5.0)
 - github.com/moby/locker: [v1.0.1](https://github.com/moby/locker/tree/v1.0.1)
 - github.com/nwaples/rardecode: [v1.1.0](https://github.com/nwaples/rardecode/tree/v1.1.0)
 - github.com/pierrec/lz4/v4: [v4.0.3](https://github.com/pierrec/lz4/v4/tree/v4.0.3)
+- github.com/pkg/sftp: [v1.10.1](https://github.com/pkg/sftp/tree/v1.10.1)
 - github.com/robfig/cron/v3: [v3.0.1](https://github.com/robfig/cron/v3/tree/v3.0.1)
+- github.com/songgao/water: [2b4b6d7](https://github.com/songgao/water/tree/2b4b6d7)
 - github.com/spiegel-im-spiegel/errs: [v1.0.2](https://github.com/spiegel-im-spiegel/errs/tree/v1.0.2)
 - github.com/spiegel-im-spiegel/go-cvss: [v0.4.0](https://github.com/spiegel-im-spiegel/go-cvss/tree/v0.4.0)
 - github.com/stoewer/go-strcase: [v1.2.0](https://github.com/stoewer/go-strcase/tree/v1.2.0)
-- github.com/vbauerster/mpb/v7: [v7.0.2](https://github.com/vbauerster/mpb/v7/tree/v7.0.2)
+- github.com/vbauerster/mpb/v7: [v7.0.3](https://github.com/vbauerster/mpb/v7/tree/v7.0.3)
 - github.com/xanzy/go-gitlab: [v0.43.0](https://github.com/xanzy/go-gitlab/tree/v0.43.0)
 - github.com/xi2/xz: [48954b6](https://github.com/xi2/xz/tree/48954b6)
 - go.etcd.io/etcd/api/v3: v3.5.0
@@ -176,18 +181,21 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - sigs.k8s.io/zeitgeist: v0.3.0
 
 ### Changed
+- cloud.google.com/go: v0.75.0 → v0.81.0
 - github.com/Azure/azure-sdk-for-go: [v43.0.0+incompatible → v55.0.0+incompatible](https://github.com/Azure/azure-sdk-for-go/compare/v43.0.0...v55.0.0)
 - github.com/Azure/go-ansiterm: [d6e3b33 → d185dfc](https://github.com/Azure/go-ansiterm/compare/d6e3b33...d185dfc)
 - github.com/Azure/go-autorest/autorest/adal: [v0.9.5 → v0.9.13](https://github.com/Azure/go-autorest/autorest/adal/compare/v0.9.5...v0.9.13)
 - github.com/Azure/go-autorest/autorest/to: [v0.3.0 → v0.4.0](https://github.com/Azure/go-autorest/autorest/to/compare/v0.3.0...v0.4.0)
 - github.com/Azure/go-autorest/autorest: [v0.11.12 → v0.11.18](https://github.com/Azure/go-autorest/autorest/compare/v0.11.12...v0.11.18)
 - github.com/Azure/go-autorest/logger: [v0.2.0 → v0.2.1](https://github.com/Azure/go-autorest/logger/compare/v0.2.0...v0.2.1)
+- github.com/BurntSushi/toml: [v0.3.1 → v0.4.1](https://github.com/BurntSushi/toml/compare/v0.3.1...v0.4.1)
 - github.com/Microsoft/go-winio: [6eac466 → v0.5.0](https://github.com/Microsoft/go-winio/compare/6eac466...v0.5.0)
-- github.com/Microsoft/hcsshim: [v0.8.15 → v0.8.18](https://github.com/Microsoft/hcsshim/compare/v0.8.15...v0.8.18)
+- github.com/Microsoft/hcsshim: [v0.8.15 → v0.8.20](https://github.com/Microsoft/hcsshim/compare/v0.8.15...v0.8.20)
 - github.com/VividCortex/ewma: [v1.1.1 → v1.2.0](https://github.com/VividCortex/ewma/compare/v1.1.1...v1.2.0)
 - github.com/auth0/go-jwt-middleware: [5493cab → v1.0.1](https://github.com/auth0/go-jwt-middleware/compare/5493cab...v1.0.1)
 - github.com/aws/aws-sdk-go: [v1.35.24 → v1.38.49](https://github.com/aws/aws-sdk-go/compare/v1.35.24...v1.38.49)
-- github.com/cilium/ebpf: [v0.2.0 → v0.5.0](https://github.com/cilium/ebpf/compare/v0.2.0...v0.5.0)
+- github.com/bketelsen/crypt: [5cbc8cc → v0.0.4](https://github.com/bketelsen/crypt/compare/5cbc8cc...v0.0.4)
+- github.com/cilium/ebpf: [v0.2.0 → v0.6.2](https://github.com/cilium/ebpf/compare/v0.2.0...v0.6.2)
 - github.com/cockroachdb/datadriven: [80d97fb → bf6692d](https://github.com/cockroachdb/datadriven/compare/80d97fb...bf6692d)
 - github.com/container-storage-interface/spec: [v1.3.0 → v1.5.0](https://github.com/container-storage-interface/spec/compare/v1.3.0...v1.5.0)
 - github.com/containerd/aufs: [20793ff → v1.0.0](https://github.com/containerd/aufs/compare/20793ff...v1.0.0)
@@ -203,26 +211,28 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/nri: [dbaa18c → v0.1.0](https://github.com/containerd/nri/compare/dbaa18c...v0.1.0)
 - github.com/containerd/typeurl: [v1.0.1 → v1.0.2](https://github.com/containerd/typeurl/compare/v1.0.1...v1.0.2)
 - github.com/containerd/zfs: [dde8f0f → v1.0.0](https://github.com/containerd/zfs/compare/dde8f0f...v1.0.0)
-- github.com/containers/buildah: [v1.20.0 → v1.21.3](https://github.com/containers/buildah/compare/v1.20.0...v1.21.3)
-- github.com/containers/common: [v0.35.4 → v0.38.16](https://github.com/containers/common/compare/v0.35.4...v0.38.16)
-- github.com/containers/image/v5: [v5.11.0 → v5.13.2](https://github.com/containers/image/v5/compare/v5.11.0...v5.13.2)
+- github.com/containers/buildah: [v1.20.0 → v1.22.0](https://github.com/containers/buildah/compare/v1.20.0...v1.22.0)
+- github.com/containers/common: [v0.35.4 → v0.43.0](https://github.com/containers/common/compare/v0.35.4...v0.43.0)
+- github.com/containers/image/v5: [v5.11.0 → v5.15.0](https://github.com/containers/image/v5/compare/v5.11.0...v5.15.0)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.2](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.2)
-- github.com/containers/podman/v3: [v3.1.0 → v3.2.3](https://github.com/containers/podman/v3/compare/v3.1.0...v3.2.3)
-- github.com/containers/storage: [v1.28.1 → v1.32.3](https://github.com/containers/storage/compare/v1.28.1...v1.32.3)
+- github.com/containers/podman/v3: [v3.1.0 → v3.3.0-rc2](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.0-rc2)
+- github.com/containers/storage: [v1.28.1 → v1.34.1](https://github.com/containers/storage/compare/v1.28.1...v1.34.1)
 - github.com/coredns/corefile-migration: [v1.0.11 → v1.0.12](https://github.com/coredns/corefile-migration/compare/v1.0.11...v1.0.12)
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
 - github.com/creack/pty: [v1.1.11 → v1.1.14](https://github.com/creack/pty/compare/v1.1.11...v1.1.14)
 - github.com/cri-o/ocicni: [541cf7c → 4ea5fb8](https://github.com/cri-o/ocicni/compare/541cf7c...4ea5fb8)
 - github.com/cyphar/filepath-securejoin: [v0.2.2 → v0.2.3](https://github.com/cyphar/filepath-securejoin/compare/v0.2.2...v0.2.3)
 - github.com/docker/docker-credential-helpers: [v0.6.3 → v0.6.4](https://github.com/docker/docker-credential-helpers/compare/v0.6.3...v0.6.4)
-- github.com/docker/docker: [646072e → v20.10.6+incompatible](https://github.com/docker/docker/compare/646072e...v20.10.6)
+- github.com/docker/docker: [646072e → v20.10.8+incompatible](https://github.com/docker/docker/compare/646072e...v20.10.8)
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/evanphx/json-patch: [v4.9.0+incompatible → v4.11.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.9.0...v4.11.0)
 - github.com/form3tech-oss/jwt-go: [v3.2.2+incompatible → v3.2.3+incompatible](https://github.com/form3tech-oss/jwt-go/compare/v3.2.2...v3.2.3)
+- github.com/fsouza/go-dockerclient: [v1.7.2 → v1.7.3](https://github.com/fsouza/go-dockerclient/compare/v1.7.2...v1.7.3)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
 - github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/jsonreference: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonreference/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/swag: [v0.19.5 → v0.19.14](https://github.com/go-openapi/swag/compare/v0.19.5...v0.19.14)
+- github.com/gofrs/flock: [v0.8.0 → v0.8.1](https://github.com/gofrs/flock/compare/v0.8.0...v0.8.1)
 - github.com/golang/groupcache: [8c9f03a → 41bb18b](https://github.com/golang/groupcache/compare/8c9f03a...41bb18b)
 - github.com/golang/mock: [v1.5.0 → v1.6.0](https://github.com/golang/mock/compare/v1.5.0...v1.6.0)
 - github.com/golang/protobuf: [v1.3.5 → v1.5.2](https://github.com/golang/protobuf/compare/v1.3.5...v1.5.2)
@@ -231,6 +241,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/google/cadvisor: [v0.39.0 → v0.39.2](https://github.com/google/cadvisor/compare/v0.39.0...v0.39.2)
 - github.com/google/go-cmp: [v0.5.5 → v0.5.6](https://github.com/google/go-cmp/compare/v0.5.5...v0.5.6)
 - github.com/google/gofuzz: [v1.1.0 → v1.2.0](https://github.com/google/gofuzz/compare/v1.1.0...v1.2.0)
+- github.com/google/pprof: [b9804c9 → cbba55b](https://github.com/google/pprof/compare/b9804c9...cbba55b)
 - github.com/google/renameio: [v1.0.0 → v1.0.1](https://github.com/google/renameio/compare/v1.0.0...v1.0.1)
 - github.com/google/uuid: [v1.2.0 → v1.3.0](https://github.com/google/uuid/compare/v1.2.0...v1.3.0)
 - github.com/googleapis/gnostic: [v0.4.1 → v0.5.5](https://github.com/googleapis/gnostic/compare/v0.4.1...v0.5.5)
@@ -245,8 +256,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/ishidawataru/sctp: [00ab2ac → f2269e6](https://github.com/ishidawataru/sctp/compare/00ab2ac...f2269e6)
 - github.com/jonboulle/clockwork: [v0.1.0 → v0.2.2](https://github.com/jonboulle/clockwork/compare/v0.1.0...v0.2.2)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
-- github.com/klauspost/compress: [v1.11.13 → v1.13.1](https://github.com/klauspost/compress/compare/v1.11.13...v1.13.1)
+- github.com/klauspost/compress: [v1.11.13 → v1.13.4](https://github.com/klauspost/compress/compare/v1.11.13...v1.13.4)
 - github.com/magefile/mage: [v1.10.0 → v1.11.0](https://github.com/magefile/mage/compare/v1.10.0...v1.11.0)
+- github.com/magiconair/properties: [v1.8.1 → v1.8.5](https://github.com/magiconair/properties/compare/v1.8.1...v1.8.5)
 - github.com/mailru/easyjson: [v0.7.0 → v0.7.6](https://github.com/mailru/easyjson/compare/v0.7.0...v0.7.6)
 - github.com/mattn/go-runewidth: [v0.0.10 → v0.0.13](https://github.com/mattn/go-runewidth/compare/v0.0.10...v0.0.13)
 - github.com/mattn/go-shellwords: [v1.0.11 → v1.0.12](https://github.com/mattn/go-shellwords/compare/v1.0.11...v1.0.12)
@@ -255,29 +267,34 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/moby/term: [df9cb8a → 9d4ed18](https://github.com/moby/term/compare/df9cb8a...9d4ed18)
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.15.2 → v1.16.4](https://github.com/onsi/ginkgo/compare/v1.15.2...v1.16.4)
-- github.com/onsi/gomega: [v1.11.0 → v1.14.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.14.0)
+- github.com/onsi/gomega: [v1.11.0 → v1.15.0](https://github.com/onsi/gomega/compare/v1.11.0...v1.15.0)
 - github.com/opencontainers/image-spec: [79b036d → 083f635](https://github.com/opencontainers/image-spec/compare/79b036d...083f635)
-- github.com/opencontainers/runc: [v1.0.0-rc93 → a95237f](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...a95237f)
+- github.com/opencontainers/runc: [v1.0.0-rc93 → v1.0.1](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...v1.0.1)
 - github.com/opencontainers/runtime-spec: [7413a7f → 8961758](https://github.com/opencontainers/runtime-spec/compare/7413a7f...8961758)
 - github.com/opencontainers/runtime-tools: [d1bf3e6 → 59cdde0](https://github.com/opencontainers/runtime-tools/compare/d1bf3e6...59cdde0)
-- github.com/opencontainers/selinux: [v1.8.0 → v1.8.3](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.3)
+- github.com/opencontainers/selinux: [v1.8.0 → v1.8.4](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.4)
 - github.com/openshift/imagebuilder: [v1.2.0 → 87f3e48](https://github.com/openshift/imagebuilder/compare/v1.2.0...87f3e48)
-- github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
+- github.com/pelletier/go-toml: [v1.2.0 → v1.9.3](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.9.3)
 - github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
 - github.com/prometheus/client_golang: [v1.10.0 → v1.11.0](https://github.com/prometheus/client_golang/compare/v1.10.0...v1.11.0)
 - github.com/prometheus/common: [v0.18.0 → v0.29.0](https://github.com/prometheus/common/compare/v0.18.0...v0.29.0)
 - github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
 - github.com/rogpeppe/fastuuid: [6724a57 → v1.2.0](https://github.com/rogpeppe/fastuuid/compare/6724a57...v1.2.0)
 - github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
-- github.com/rootless-containers/rootlesskit: [v0.14.0-beta.0 → v0.14.2](https://github.com/rootless-containers/rootlesskit/compare/v0.14.0-beta.0...v0.14.2)
+- github.com/rootless-containers/rootlesskit: [v0.14.0-beta.0 → v0.14.4](https://github.com/rootless-containers/rootlesskit/compare/v0.14.0-beta.0...v0.14.4)
 - github.com/saschagrunert/go-modiff: [v1.2.1 → v1.3.0](https://github.com/saschagrunert/go-modiff/compare/v1.2.1...v1.3.0)
 - github.com/smartystreets/assertions: [b2de0cb → v1.1.0](https://github.com/smartystreets/assertions/compare/b2de0cb...v1.1.0)
-- github.com/spf13/jwalterweatherman: [v1.1.0 → v1.0.0](https://github.com/spf13/jwalterweatherman/compare/v1.1.0...v1.0.0)
+- github.com/spf13/afero: [v1.2.2 → v1.6.0](https://github.com/spf13/afero/compare/v1.2.2...v1.6.0)
+- github.com/spf13/cast: [v1.3.0 → v1.3.1](https://github.com/spf13/cast/compare/v1.3.0...v1.3.1)
+- github.com/spf13/cobra: [v1.1.3 → v1.2.1](https://github.com/spf13/cobra/compare/v1.1.3...v1.2.1)
+- github.com/spf13/viper: [v1.7.0 → v1.8.1](https://github.com/spf13/viper/compare/v1.7.0...v1.8.1)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
 - github.com/tmc/grpc-websocket-proxy: [0ad062e → e5319fd](https://github.com/tmc/grpc-websocket-proxy/compare/0ad062e...e5319fd)
-- github.com/uber/jaeger-client-go: [v2.25.0+incompatible → v2.28.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.25.0...v2.28.0)
+- github.com/uber/jaeger-client-go: [v2.25.0+incompatible → v2.29.1+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.25.0...v2.29.1)
+- github.com/vbauerster/mpb/v6: [v6.0.3 → v6.0.4](https://github.com/vbauerster/mpb/v6/compare/v6.0.3...v6.0.4)
 - github.com/yuin/goldmark: [v1.3.1 → v1.3.5](https://github.com/yuin/goldmark/compare/v1.3.1...v1.3.5)
 - go.etcd.io/bbolt: v1.3.5 → v1.3.6
+- go.opencensus.io: v0.22.5 → v0.23.0
 - go.uber.org/atomic: v1.5.0 → v1.7.0
 - go.uber.org/multierr: v1.3.0 → v1.6.0
 - go.uber.org/zap: v1.13.0 → v1.17.0
@@ -290,10 +307,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/time: f8bda1e → 1f47c86
 - golang.org/x/tools: v0.1.0 → v0.1.2
+- google.golang.org/api: v0.36.0 → v0.44.0
 - google.golang.org/grpc: v1.27.0 → v1.39.0
 - google.golang.org/protobuf: v1.25.0 → v1.26.0
 - gopkg.in/check.v1: 038fdea → 10cb982
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
+- gopkg.in/ini.v1: v1.51.0 → v1.62.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
 - k8s.io/klog/v2: v2.8.0 → v2.10.0
 - k8s.io/kube-openapi: 591a79e → 9528897
@@ -352,7 +371,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/caddyserver/caddy: [v1.0.3](https://github.com/caddyserver/caddy/tree/v1.0.3)
 - github.com/casbin/casbin/v2: [v2.1.2](https://github.com/casbin/casbin/v2/tree/v2.1.2)
 - github.com/cenkalti/backoff: [v2.2.1+incompatible](https://github.com/cenkalti/backoff/tree/v2.2.1)
-- github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
+- github.com/checkpoint-restore/go-criu: [bdb7599](https://github.com/checkpoint-restore/go-criu/tree/bdb7599)
 - github.com/cheekybits/genny: [9127e81](https://github.com/cheekybits/genny/tree/9127e81)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
 - github.com/codahale/hdrhistogram: [3a0bb77](https://github.com/codahale/hdrhistogram/tree/3a0bb77)
@@ -378,6 +397,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/hashicorp/go-version: [v1.2.0](https://github.com/hashicorp/go-version/tree/v1.2.0)
 - github.com/hudl/fargo: [v1.3.0](https://github.com/hudl/fargo/tree/v1.3.0)
 - github.com/influxdata/influxdb1-client: [8bf82d3](https://github.com/influxdata/influxdb1-client/tree/8bf82d3)
+- github.com/jamescun/tuntap: [cb1fb27](https://github.com/jamescun/tuntap/tree/cb1fb27)
 - github.com/jimstudt/http-authentication: [3eca13d](https://github.com/jimstudt/http-authentication/tree/3eca13d)
 - github.com/kylelemons/godebug: [d65d576](https://github.com/kylelemons/godebug/tree/d65d576)
 - github.com/lightstep/lightstep-tracer-common/golang/gogo: [bc2310a](https://github.com/lightstep/lightstep-tracer-common/golang/gogo/tree/bc2310a)
