Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...df41b98](https://github.com/cri-o/cri-o/compare/v1.21.0...df41b98f3946923b891252440e339fb6b11652f0) on Wed, 18 Aug 2021 15:09:43 UTC.
+[v1.21.0...56fb46e](https://github.com/cri-o/cri-o/compare/v1.21.0...56fb46e28e8e1ec3f05dc9801e9b7181cff230f8) on Wed, 18 Aug 2021 16:49:28 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz)
-- [cri-o.arm64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.df41b98f3946923b891252440e339fb6b11652f0.tar.gz)
+- [cri-o.amd64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz)
+- [cri-o.arm64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -51,6 +51,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - CNI plugins are now passed a K8S_POD_UID environment variable containing the pod UID this sandbox was started for. ([#5026](https://github.com/cri-o/cri-o/pull/5026), [@dcbw](https://github.com/dcbw))
  - Changed the logging behavior of klog messages to be included in the CRI-O logs.
   The klog info verbositry is converted to CRI-O debug to lower the log verbosity. ([#4973](https://github.com/cri-o/cri-o/pull/4973), [@saschagrunert](https://github.com/saschagrunert))
+ - Cri-o now does not limit the DNS search paths. ([#5199](https://github.com/cri-o/cri-o/pull/5199), [@gjkim42](https://github.com/gjkim42))
  - Enable the  "volatile" option for the overlay drivers when it is supported by the underlying kernel. ([#4885](https://github.com/cri-o/cri-o/pull/4885), [@giuseppe](https://github.com/giuseppe))
  - Rootless: enable resource limit when cgroup v2 controllers are delegated. ([#4528](https://github.com/cri-o/cri-o/pull/4528), [@AkihiroSuda](https://github.com/AkihiroSuda))
  - Support `io.kubernetes.cri.rdt-class` container annotation for specifying RDT class.
