Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,20 +17,21 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...56fb46e](https://github.com/cri-o/cri-o/compare/v1.21.0...56fb46e28e8e1ec3f05dc9801e9b7181cff230f8) on Wed, 18 Aug 2021 16:52:57 UTC.
+[v1.21.0...c1e95b1](https://github.com/cri-o/cri-o/compare/v1.21.0...c1e95b1aaa19832eff100e5806b40f91c040b12e) on Wed, 18 Aug 2021 19:47:46 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz)
-- [cri-o.arm64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.56fb46e28e8e1ec3f05dc9801e9b7181cff230f8.tar.gz)
+- [cri-o.amd64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz)
+- [cri-o.arm64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz)
 
 ## Changelog since v1.21.0
 
 ### Changes by Kind
 
 #### Dependency-Change
+ - Update runc within static binary bundle to v1.0.1 ([#5194](https://github.com/cri-o/cri-o/pull/5194), [@saschagrunert](https://github.com/saschagrunert))
  - Update static binary bundle runc version to `v1.0.0-rc94`. ([#4882](https://github.com/cri-o/cri-o/pull/4882), [@saschagrunert](https://github.com/saschagrunert))
  - Update static binary bundle runc version to `v1.0.0-rc95`. ([#4920](https://github.com/cri-o/cri-o/pull/4920), [@saschagrunert](https://github.com/saschagrunert))
  - Updated crun in static binary bundle to v0.20.1 ([#4959](https://github.com/cri-o/cri-o/pull/4959), [@saschagrunert](https://github.com/saschagrunert))
