Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...c1e95b1](https://github.com/cri-o/cri-o/compare/v1.21.0...c1e95b1aaa19832eff100e5806b40f91c040b12e) on Wed, 18 Aug 2021 19:47:46 UTC.
+[v1.21.0...3a523e9](https://github.com/cri-o/cri-o/compare/v1.21.0...3a523e9bd2d704e612f8644658cbdb4c0e244372) on Thu, 19 Aug 2021 00:13:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz)
-- [cri-o.arm64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c1e95b1aaa19832eff100e5806b40f91c040b12e.tar.gz)
+- [cri-o.amd64.3a523e9bd2d704e612f8644658cbdb4c0e244372.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3a523e9bd2d704e612f8644658cbdb4c0e244372.tar.gz)
+- [cri-o.arm64.3a523e9bd2d704e612f8644658cbdb4c0e244372.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3a523e9bd2d704e612f8644658cbdb4c0e244372.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -70,6 +70,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add symlink /proc/mounts on /etc/mtab to container ([#5051](https://github.com/cri-o/cri-o/pull/5051), [@QiWang19](https://github.com/QiWang19))
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4907](https://github.com/cri-o/cri-o/pull/4907), [@haircommander](https://github.com/haircommander))
+ - CRI-O now logs when it is using cgroupv2 ([#5183](https://github.com/cri-o/cri-o/pull/5183), [@haircommander](https://github.com/haircommander))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4900](https://github.com/cri-o/cri-o/pull/4900), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
