--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...2d289a2](https://github.com/cri-o/cri-o/compare/v1.21.0...2d289a2237c75abcc770478c71452af1e8493e3b) on Fri, 20 Aug 2021 20:06:47 UTC.
+[v1.21.0...8234f90](https://github.com/cri-o/cri-o/compare/v1.21.0...8234f90260b9be468ec37eb01ea686d0a815a04e) on Sat, 21 Aug 2021 04:55:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2d289a2237c75abcc770478c71452af1e8493e3b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2d289a2237c75abcc770478c71452af1e8493e3b.tar.gz)
-- [cri-o.arm64.2d289a2237c75abcc770478c71452af1e8493e3b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2d289a2237c75abcc770478c71452af1e8493e3b.tar.gz)
+- [cri-o.amd64.8234f90260b9be468ec37eb01ea686d0a815a04e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8234f90260b9be468ec37eb01ea686d0a815a04e.tar.gz)
+- [cri-o.arm64.8234f90260b9be468ec37eb01ea686d0a815a04e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8234f90260b9be468ec37eb01ea686d0a815a04e.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -63,6 +63,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Validate certificate dates for TLS metrics endpoint ([#4990](https://github.com/cri-o/cri-o/pull/4990), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Design
+ - Drop support for the crio.shutdown. ([#5173](https://github.com/cri-o/cri-o/pull/5173), [@haircommander](https://github.com/haircommander))
  - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4943](https://github.com/cri-o/cri-o/pull/4943), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
