Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...177ed5f](https://github.com/cri-o/cri-o/compare/v1.21.0...177ed5f1a66294a69764676a864777bbfa4d09c4) on Sat, 21 Aug 2021 12:05:53 UTC.
+[v1.21.0...9f38eee](https://github.com/cri-o/cri-o/compare/v1.21.0...9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2) on Mon, 23 Aug 2021 09:01:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.177ed5f1a66294a69764676a864777bbfa4d09c4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.177ed5f1a66294a69764676a864777bbfa4d09c4.tar.gz)
-- [cri-o.arm64.177ed5f1a66294a69764676a864777bbfa4d09c4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.177ed5f1a66294a69764676a864777bbfa4d09c4.tar.gz)
+- [cri-o.amd64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz)
+- [cri-o.arm64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -215,11 +215,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/nri: [dbaa18c → v0.1.0](https://github.com/containerd/nri/compare/dbaa18c...v0.1.0)
 - github.com/containerd/typeurl: [v1.0.1 → v1.0.2](https://github.com/containerd/typeurl/compare/v1.0.1...v1.0.2)
 - github.com/containerd/zfs: [dde8f0f → v1.0.0](https://github.com/containerd/zfs/compare/dde8f0f...v1.0.0)
-- github.com/containers/buildah: [v1.20.0 → v1.22.0](https://github.com/containers/buildah/compare/v1.20.0...v1.22.0)
+- github.com/containers/buildah: [v1.20.0 → v1.22.3](https://github.com/containers/buildah/compare/v1.20.0...v1.22.3)
 - github.com/containers/common: [v0.35.4 → v0.43.2](https://github.com/containers/common/compare/v0.35.4...v0.43.2)
-- github.com/containers/image/v5: [v5.11.0 → v5.15.0](https://github.com/containers/image/v5/compare/v5.11.0...v5.15.0)
+- github.com/containers/image/v5: [v5.11.0 → v5.15.2](https://github.com/containers/image/v5/compare/v5.11.0...v5.15.2)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.2](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.2)
-- github.com/containers/podman/v3: [v3.1.0 → v3.3.0-rc2](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.0-rc2)
+- github.com/containers/podman/v3: [v3.1.0 → v3.3.0](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.0)
 - github.com/containers/storage: [v1.28.1 → v1.34.1](https://github.com/containers/storage/compare/v1.28.1...v1.34.1)
 - github.com/coredns/corefile-migration: [v1.0.11 → v1.0.12](https://github.com/coredns/corefile-migration/compare/v1.0.11...v1.0.12)
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
