Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...9f38eee](https://github.com/cri-o/cri-o/compare/v1.21.0...9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2) on Mon, 23 Aug 2021 09:01:50 UTC.
+[v1.21.0...4e5a828](https://github.com/cri-o/cri-o/compare/v1.21.0...4e5a82894c0db9929355221b4d08731f9d00e581) on Mon, 23 Aug 2021 19:15:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz)
-- [cri-o.arm64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9f38eee3ffef5ce3a7d553ad2c1a18cb067664e2.tar.gz)
+- [cri-o.amd64.4e5a82894c0db9929355221b4d08731f9d00e581.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4e5a82894c0db9929355221b4d08731f9d00e581.tar.gz)
+- [cri-o.arm64.4e5a82894c0db9929355221b4d08731f9d00e581.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4e5a82894c0db9929355221b4d08731f9d00e581.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -101,6 +101,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Other (Cleanup or Flake)
  - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
  - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
+ - Use build tag for `linkmode` detection on `crio version`. ([#5239](https://github.com/cri-o/cri-o/pull/5239), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
  - Add Particule as adopters ([#4994](https://github.com/cri-o/cri-o/pull/4994), [@ArchiFleKs](https://github.com/ArchiFleKs))
